#69 Refactoring GameObject and fix bug with null Position